[metadata]
name = recombulatorx
author = Serena Aneli
author_email = serena.aneli@unito.it
url = https://serena-aneli.github.io/recombulator-x/
description = estimation of recombination rates between short tandem repeats (STRs) along the X chromosome
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:
install_requires =
    numpy >= 1.15.4
    scipy >= 1.2.0
    networkx >= 2.0
    pandas >= 0.23.4
[options.extras_require]
JIT =
    numba >= 0.49.0

[options.entry_points]
console_scripts =
    recombulator-x = recombulatorx.cli:main

